# groceryScraper

./: .gitignore  README.md  classes.py  ioutils.py  main.py  pdfscrape.py  pyproject.toml  requirements.txt  scrape.py  scrapeTest.py  tui.py  utils.py
